versions/v3.6.0/doxygen/html/globals_eval_p.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_eval_p.html
original_path: doxygen/html/globals_eval_p.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - p -

- PC : [gdbstub.h](arch_2arm_2gdbstub_8h.md#a0d4c0f1339778bac80a5871c979605abaa2c62b62b658ac45e83749e9e9c1cb46)
- PCIE\_EP\_IRQ\_LEGACY : [pcie\_ep.h](pcie__ep_8h.md#aba0e572125869b246d4968ee164f3800ad90da0a62096ef8a4fc7d230afd0d44d)
- PCIE\_EP\_IRQ\_MSI : [pcie\_ep.h](pcie__ep_8h.md#aba0e572125869b246d4968ee164f3800a267b658ad2587fd0d57664197daeb318)
- PCIE\_EP\_IRQ\_MSIX : [pcie\_ep.h](pcie__ep_8h.md#aba0e572125869b246d4968ee164f3800a55cad2c5812c9c7c14476ff000199ad4)
- PCIE\_FLR : [pcie\_ep.h](pcie__ep_8h.md#a7b0f0f4693b7d11b973bfd62ac1b35cda6dcb2d2f5ad3624bda5ca25d2e38a47a)
- PCIE\_OB\_ANYMEM : [pcie\_ep.h](pcie__ep_8h.md#aa7c51648c5a1663dd4dec689727a510ba52b8bd55168f44c7c4a6a3d36824d286)
- PCIE\_OB\_HIGHMEM : [pcie\_ep.h](pcie__ep_8h.md#aa7c51648c5a1663dd4dec689727a510ba13da19c9fa1732e72fa8add58da33ebb)
- PCIE\_OB\_LOWMEM : [pcie\_ep.h](pcie__ep_8h.md#aa7c51648c5a1663dd4dec689727a510ba5312fb052e8dafaab224a4b554292e74)
- PCIE\_PERST : [pcie\_ep.h](pcie__ep_8h.md#a7b0f0f4693b7d11b973bfd62ac1b35cda532057b4dab53d2e86701394ead62ea7)
- PCIE\_PERST\_INB : [pcie\_ep.h](pcie__ep_8h.md#a7b0f0f4693b7d11b973bfd62ac1b35cda7d94ae3f1fbdd486102559a450f01dee)
- PCIE\_RESET\_MAX : [pcie\_ep.h](pcie__ep_8h.md#a7b0f0f4693b7d11b973bfd62ac1b35cda2c60bd39ac112aad31d1299900f0795a)
- PCIE\_SCAN\_CB\_ALL : [pcie.h](group__pcie__host__interface.md#ggabe00c00fc0af29786c3b42f22f82aecfa3579c18ade658f55affd41bfd38f9072)
- PCIE\_SCAN\_RECURSIVE : [pcie.h](group__pcie__host__interface.md#ggabe00c00fc0af29786c3b42f22f82aecfa228932ef6533931a9ae55e37dc38f3c4)
- PD\_CONNECTED : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23adbefad204068244fdf75ba1ff211fbfc)
- PD\_CTRL\_ACCEPT : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa56df68ed627b56bbcfc20900ec5d2e5d)
- PD\_CTRL\_DATA\_RESET : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa03f9886881aa493fb0f9bfac16713e7a)
- PD\_CTRL\_DATA\_RESET\_COMPLETE : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa27caca37f9522045bc8612f7536cd792)
- PD\_CTRL\_DR\_SWAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa4aba967f7e363dbbadcc9a9ecf0c7ae4)
- PD\_CTRL\_FR\_SWAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa1c597b5f953e6e1791aa869025b98b24)
- PD\_CTRL\_GET\_COUNTRY\_CODES : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa677ebc41b4b67de6ee93b5e446af702e)
- PD\_CTRL\_GET\_PPS\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aab82efb96b1f8f7dae3c76e362ae1715a)
- PD\_CTRL\_GET\_SINK\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aaaf5c221569a9108bdbc36545dcb37495)
- PD\_CTRL\_GET\_SINK\_CAP\_EXT : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aaaa0a5bba9a9f1573952141c4f8f77318)
- PD\_CTRL\_GET\_SOURCE\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa9324307526500683ae265e9cb0063929)
- PD\_CTRL\_GET\_SOURCE\_CAP\_EXT : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aab0ca2628b144d092116b461703176eaa)
- PD\_CTRL\_GET\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa23287276ee22241906828515f38fedef)
- PD\_CTRL\_GOOD\_CRC : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aae0895be53e5a1e54731e9608a8e0c6c9)
- PD\_CTRL\_GOTO\_MIN : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa4ba7f63cdcbe766a34047e06145a591e)
- PD\_CTRL\_NOT\_SUPPORTED : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aabfea5fdf0263fdf4c924bd603ee7256f)
- PD\_CTRL\_PING : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa8177040ca8a1f71dde67fc59060c35ed)
- PD\_CTRL\_PR\_SWAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aade67c4fb153e5ba87b6d6643f99260f9)
- PD\_CTRL\_PS\_RDY : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aafc449fc3dc39f2495494507cc97f53ad)
- PD\_CTRL\_REJECT : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa9dd7b559e78a99639056325a7be14d81)
- PD\_CTRL\_SOFT\_RESET : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aadeb12ed01ec54ee55588bfb796dd0c11)
- PD\_CTRL\_VCONN\_SWAP : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa68820e99ce9c1c73180734372e5ede2b)
- PD\_CTRL\_WAIT : [usbc\_pd.h](group__usb__power__delivery.md#gga4c7862a3e953fb22534123223c942f9aa3b6fc49b1ae0bb343d39476350b59c90)
- PD\_DATA\_ALERT : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a7e3368e1c7bde4c6bb3136cb80209bb6)
- PD\_DATA\_BATTERY\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462ad493f01ffc4c3c164f874eb202f8adb0)
- PD\_DATA\_BIST : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a7c4bc907fb81082da05c64797854be9f)
- PD\_DATA\_ENTER\_USB : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a1a0829560f9f82182f7587fd8787a846)
- PD\_DATA\_GET\_COUNTRY\_INFO : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a83d7098236e97972cf24b900f7e5e069)
- PD\_DATA\_REQUEST : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462ad9c920f987e2578b030cc08f2e69998a)
- PD\_DATA\_SINK\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a4cf30dcbce3fdf8076713e45d242b39a)
- PD\_DATA\_SOURCE\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462ad9a0cf16cfa852111ea0ed3434b35dfc)
- PD\_DATA\_VENDOR\_DEF : [usbc\_pd.h](group__usb__power__delivery.md#gga8239651864b4cb0e1fc89ba2d7e59462a881fcbc2dc5f8b1de7c97522df46242d)
- PD\_EXT\_BATTERY\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfae7f7b3f7233bb5cf600338b4a2c601c0)
- PD\_EXT\_COUNTRY\_CODES : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfae69b4a8ddba29bc6cd69d50c946bc658)
- PD\_EXT\_COUNTRY\_INFO : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfaa21adc92574ed1261b6c13df3592601b)
- PD\_EXT\_FIRMWARE\_UPDATE\_REQUEST : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa2a7b6a78cf3fd87a86f060f927b566af)
- PD\_EXT\_FIRMWARE\_UPDATE\_RESPONSE : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa4fe2d7028fa2bdf594cb8c87ac05fe67)
- PD\_EXT\_GET\_BATTERY\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa9c50488735d7723c3cc30f176c221e40)
- PD\_EXT\_GET\_BATTERY\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa77ff801aa819461f0f5ff44546370bd7)
- PD\_EXT\_GET\_MANUFACTURER\_INFO : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfac8fc4c3c64fb3eaba8cb61bd999c7033)
- PD\_EXT\_MANUFACTURER\_INFO : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa500d77f178123eab8073058dd9308ea6)
- PD\_EXT\_PPS\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa7d04da3fdb96eac97200d11eb2dbe083)
- PD\_EXT\_SECURITY\_REQUEST : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa0f62aa3774995018514dcd2f75ac1c1f)
- PD\_EXT\_SECURITY\_RESPONSE : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfad002882e8bce9cdfdb0864cd6a3e79a7)
- PD\_EXT\_SOURCE\_CAP : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa51c03e44c3fe1bb59445bbc452ea7199)
- PD\_EXT\_STATUS : [usbc\_pd.h](group__usb__power__delivery.md#gga457308d50365e0a2440e94e41a316cbfa836130da5307aed6160deadadf2f4f3f)
- PD\_PACKET\_CABLE\_RESET : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba531ebc6013984b81e6fb550618d6b4a8)
- PD\_PACKET\_DEBUG\_PRIME : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba63b2200ebaf016d06437f3586d15171d)
- PD\_PACKET\_DEBUG\_PRIME\_PRIME : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba4ffb0f82eaca719f7db5fa9180ce46d1)
- PD\_PACKET\_MSG\_INVALID : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba55bb88e5955992170bee96ddbe8a7437)
- PD\_PACKET\_PRIME\_PRIME : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba5ecd663a9eecefcf965f605125d5188c)
- PD\_PACKET\_SOP : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376ba0bede6a56c24b06fdf56cf1dc386bb14)
- PD\_PACKET\_SOP\_PRIME : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376bae3a5f99242ab24a34706170101b38ef8)
- PD\_PACKET\_TX\_BIST\_MODE\_2 : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376bafcd21cc6b1ae6c58b86c0619d687e8fc)
- PD\_PACKET\_TX\_HARD\_RESET : [usbc\_pd.h](group__usb__power__delivery.md#ggad2df13a24f0365198d37b10af608376baa5cd066e86fd55727c3625cd16633f73)
- PD\_PLUG\_FROM\_CABLE\_VPD : [usbc\_tc.h](group__usb__type__c.md#gga8707ac194510396d55a40887673b53caa49960a4dee1da0c7330cce2b13c4c0ed)
- PD\_PLUG\_FROM\_DFP\_UFP : [usbc\_tc.h](group__usb__type__c.md#gga8707ac194510396d55a40887673b53caad1092c45d3fad497dbafe15fd9f1c3b3)
- PD\_REV10 : [usbc\_pd.h](group__usb__power__delivery.md#ggab68c6b6e33449c5ceadfc9217dd7a700a1d9b4c553f44dccdc67e4edb554557b9)
- PD\_REV20 : [usbc\_pd.h](group__usb__power__delivery.md#ggab68c6b6e33449c5ceadfc9217dd7a700a22c122b1d30a3ab96fffd5dfa6bfb9ae)
- PD\_REV30 : [usbc\_pd.h](group__usb__power__delivery.md#ggab68c6b6e33449c5ceadfc9217dd7a700af3770bcbcf6feaaab272c022d7a57c7a)
- PDM\_CHAN\_LEFT : [dmic.h](group__audio__dmic__interface.md#gga7c2067bbb1e07fa8afe315f91a127991acca80c04de225e35ae2bdfafcca6e345)
- PDM\_CHAN\_RIGHT : [dmic.h](group__audio__dmic__interface.md#gga7c2067bbb1e07fa8afe315f91a127991a0c746475a2b5873aa863058358d8e7d0)
- PDO\_AUGMENTED : [usbc\_pd.h](group__usb__power__delivery.md#gga316dca7ed0b85f1aa224d7a767896328adb8478434cc1622e98bc22f4081dff1e)
- PDO\_BATTERY : [usbc\_pd.h](group__usb__power__delivery.md#gga316dca7ed0b85f1aa224d7a767896328a63f4fb7a4d2f7e265fd49be07966fbaa)
- PDO\_FIXED : [usbc\_pd.h](group__usb__power__delivery.md#gga316dca7ed0b85f1aa224d7a767896328abbc517bb47b6bdc76e44b599523e0d93)
- PDO\_VARIABLE : [usbc\_pd.h](group__usb__power__delivery.md#gga316dca7ed0b85f1aa224d7a767896328a1726efca9ece0ff017cc4aaf05ce9624)
- PECI\_CMD\_GET\_DIB : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a000d0e023fd6382fb1a503a3317495d8)
- PECI\_CMD\_GET\_TEMP0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6afbb78950e41573a7d0e1e5c4d63e96bf)
- PECI\_CMD\_GET\_TEMP1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a13c808d7543b5cd45afbefc8eb21611c)
- PECI\_CMD\_PING : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6aeb58e4fba76910717759cb6e2ea7189d)
- PECI\_CMD\_RD\_IAMSR0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6ae944a14033aecc7323578cac792b9e10)
- PECI\_CMD\_RD\_IAMSR1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a6769388430077f82dca456470a76ae53)
- PECI\_CMD\_RD\_PCI\_CFG0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6aa38f576d83e4fc3555cd7bffb5c5ce6d)
- PECI\_CMD\_RD\_PCI\_CFG1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a709af27dd39811f4ee57ee6b9f4675fa)
- PECI\_CMD\_RD\_PCI\_CFG\_LOCAL0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a16549485b6fcd531afcda48c323f30a5)
- PECI\_CMD\_RD\_PCI\_CFG\_LOCAL1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6acd12ed51a5dd15b29d82913149775f2c)
- PECI\_CMD\_RD\_PKG\_CFG0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a4323adb5af1251cb30f3cdffb485b523)
- PECI\_CMD\_RD\_PKG\_CFG1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a21c9a89c7a6411fc16c0a651d0239fed)
- PECI\_CMD\_WR\_IAMSR0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a31e61a2e884286a53663dfcd932d28a2)
- PECI\_CMD\_WR\_IAMSR1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6ab1ba81b33438013543b7b61cc34a04b3)
- PECI\_CMD\_WR\_PCI\_CFG0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6acb02d1f73e2b9701a108f595763c84bc)
- PECI\_CMD\_WR\_PCI\_CFG1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a572da95ca81979ad1444a4bd302c7f12)
- PECI\_CMD\_WR\_PCI\_CFG\_LOCAL0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6af737a18cbf850948594519eacfe33158)
- PECI\_CMD\_WR\_PCI\_CFG\_LOCAL1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a7ddc4229ec37021b78ea50d0cde69cdd)
- PECI\_CMD\_WR\_PKG\_CFG0 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6ac43d5530697b1e3ca0d6dd2b210cbc55)
- PECI\_CMD\_WR\_PKG\_CFG1 : [peci.h](group__peci__interface.md#ggacd243f64973f7bdcc8c999dc14ed2bd6a42fe60d1ad58a3182c42217ef3b87a95)
- PECI\_GENERAL\_SENSOR\_ERROR : [peci.h](group__peci__interface.md#gga76ad37d4317b48311cf23cf516549544ae443a31c6771f672eecbdcbc1839215f)
- PECI\_OVERFLOW\_SENSOR\_ERROR : [peci.h](group__peci__interface.md#gga76ad37d4317b48311cf23cf516549544afd2181728ca4397f39c9d632df015ed2)
- PECI\_UNDERFLOW\_SENSOR\_ERROR : [peci.h](group__peci__interface.md#gga76ad37d4317b48311cf23cf516549544a3444a28dba8e6a5d0eec8a3128e73c41)
- PERIPHERAL\_TO\_MEMORY : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402a5fbc19c9e12c11973c0cf0a593ccf165)
- PERIPHERAL\_TO\_PERIPHERAL : [dma.h](group__dma__interface.md#ggae442d8ba73be7e53b68165647b0ea402ae23cbfefccef9d19dd91f0c746004449)
- PIXEL\_FORMAT\_ARGB\_8888 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9ca90eeb0d7507e2872774d0026eb100ee9)
- PIXEL\_FORMAT\_BGR\_565 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9cae9fdd617aaf49148d4c4cb5d47189289)
- PIXEL\_FORMAT\_MONO01 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9cabb19ccb2fad2d8f809819dd0a94b1d9c)
- PIXEL\_FORMAT\_MONO10 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9ca4ab51591eb10fe72365f703d70bc7b6c)
- PIXEL\_FORMAT\_RGB\_565 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9cac0ae1813354b024a4806f5012c5c4e16)
- PIXEL\_FORMAT\_RGB\_888 : [display.h](group__display__interface.md#ggac346bc56771052a8fe919c3ec23d7c9cac99044ebc0258de7ab8f4ef46edeb44a)
- PM\_DEVICE\_ACTION\_RESUME : [device.h](group__subsys__pm__device.md#ggaee5546eacb9be7caa9d59ab63926cc4ca757c6ab81eeac0d6afae479d6a0ac564)
- PM\_DEVICE\_ACTION\_SUSPEND : [device.h](group__subsys__pm__device.md#ggaee5546eacb9be7caa9d59ab63926cc4ca5b7ae11deaee85eb0b8452bc89383790)
- PM\_DEVICE\_ACTION\_TURN\_OFF : [device.h](group__subsys__pm__device.md#ggaee5546eacb9be7caa9d59ab63926cc4ca2bcd7dee3a85b27157bbc465bacf521e)
- PM\_DEVICE\_ACTION\_TURN\_ON : [device.h](group__subsys__pm__device.md#ggaee5546eacb9be7caa9d59ab63926cc4cac7690e0ffd27742acf58fdbdb7b89544)
- PM\_DEVICE\_STATE\_ACTIVE : [device.h](group__subsys__pm__device.md#gga561c0789071e3c3963f21f4c4a1bb2c6a54b207e01b4dfc5e1ff56149817120c7)
- PM\_DEVICE\_STATE\_OFF : [device.h](group__subsys__pm__device.md#gga561c0789071e3c3963f21f4c4a1bb2c6a2456389354b744d4e96847e38f8b61c2)
- PM\_DEVICE\_STATE\_SUSPENDED : [device.h](group__subsys__pm__device.md#gga561c0789071e3c3963f21f4c4a1bb2c6a03f61cb7cd5e4820c1c731500fd053b5)
- PM\_DEVICE\_STATE\_SUSPENDING : [device.h](group__subsys__pm__device.md#gga561c0789071e3c3963f21f4c4a1bb2c6a51a5904aff980deff73d29568b6f7deb)
- PM\_STATE\_ACTIVE : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a383b8ef562f50d7a3d18914d3c950743)
- PM\_STATE\_COUNT : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a97c44ed1a8b6873243d6bbd76a382737)
- PM\_STATE\_RUNTIME\_IDLE : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a73c76572bc04e999d22a3bded9c54b19)
- PM\_STATE\_SOFT\_OFF : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a18d180711616cd9ed59fbe27dd0dbf01)
- PM\_STATE\_STANDBY : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a19a09872876d4732d0aebb82e52f2429)
- PM\_STATE\_SUSPEND\_TO\_DISK : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5acc7f38698db1ae08365115f8407c9695)
- PM\_STATE\_SUSPEND\_TO\_IDLE : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a781f940d30738d746eb2523155950fc0)
- PM\_STATE\_SUSPEND\_TO\_RAM : [state.h](group__subsys__pm__states.md#gga20e2f5ea9027a3653e5b9cc5aa1e21d5a363669b6a6db4bee5b8196442e9f2a00)
- PORT\_PARTNER\_NOT\_RESPONSIVE : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23ad52e1c4f949bb64fef1d996ac2f4e0de)
- POWER\_CHANGE\_0A0 : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a0fb0676a11ad8bad2d5249031ba5fd19)
- POWER\_CHANGE\_1A5 : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a336bfb983c4d07684d67d4d9ef6c1489)
- POWER\_CHANGE\_3A0 : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a3477c1c6ad8885c3ab7a9c58b7399dcf)
- POWER\_CHANGE\_DEF : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a3a50be6f70c1a7abd724ab447491c46a)
- PPP\_ACK\_RECEIVED : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7caf3d5f2cb8bc8352ba3b9090b9b24fe69)
- PPP\_ACK\_SENT : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7caf9ada16d1bf148c67504252439e9a1d7)
- PPP\_AUTH : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6ba0492bfbaebc3f126327c74dbe56ce76a)
- PPP\_CARRIER\_UP : [ppp.h](group__ppp.md#gga360dc50a25d0c19b99a15807bc40d971a78506697a8a37d20d486961501ec7715)
- PPP\_CCP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a4cdde6fe10fcfa862742751e1152887b)
- PPP\_CHAP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a1b311302ecabb507c34b1f77cba36f25)
- PPP\_CLOSED : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7ca0fdfbc2f4448ad005284c319928034dd)
- PPP\_CLOSING : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7ca23353ce5f2f06f3ed54e3490617c38fe)
- PPP\_CODE\_REJ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa0fd2c7adbce3dadb1d95d29bd87924aa)
- PPP\_CONFIGURE\_ACK : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa54a76789e1194fdbd753f78a674e1003)
- PPP\_CONFIGURE\_NACK : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa013bc0c33d7afbca68ea157b33773703)
- PPP\_CONFIGURE\_REJ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfacfd2485f57fcc1aea9435f70c96f7aed)
- PPP\_CONFIGURE\_REQ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfab56e4bcefa0fea644739bd2208bdff62)
- PPP\_DEAD : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6babdff682a09630e713867c3241d56954d)
- PPP\_DISCARD\_REQ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfaa1ea3fb1e422c5831d587113d786c927)
- PPP\_EAP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a7a51ef2d8d979ded98e0aad680f1b6e2)
- PPP\_ECHO\_REPLY : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa13f08a92a1b1ce1f7a0014fb7087a672)
- PPP\_ECHO\_REQ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfaf15f00b023f761f71c8e41de6afef20b)
- PPP\_ECP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a40b5032dabf9c697e761aa2cff0b2e44)
- PPP\_ESTABLISH : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6ba647d283023ee50299c1d9ca376cce4f4)
- PPP\_INITIAL : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7cacab404bd828016b38f34c8128c72c605)
- PPP\_IP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a0b974fd7b99c28a8d06f096be1ed9cc6)
- PPP\_IPCP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a25f326220ab531e93140b7c6bddd0d21)
- PPP\_IPV6 : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a0a9da56ae134b701f5a8b31c3f1c9bfe)
- PPP\_IPV6CP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670ab17a70f864ac04b8b52f8ca1edc4d2e0)
- PPP\_LCP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670a22dae8ee345f9664042eef54086f4de9)
- PPP\_NETWORK : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6ba621902d0a6ca3efa0aa20c43c32164af)
- PPP\_OPENED : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7ca5acff74b583c0798cf4cb389d659fe0d)
- PPP\_PAP : [ppp.h](group__ppp.md#gga8ad7cc0d142a6e7ea82c45bec2cc3670ac66b190ff6dd0884dfba62da40ee2206)
- PPP\_PROTOCOL\_REJ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfad0cbd4c01c071faa17b4cc2528bbeb65)
- PPP\_REQUEST\_SENT : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7ca5f27d2e78dae0c937de8669be1a3698e)
- PPP\_RUNNING : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6ba51a5c6e5d16fbb607597f0d2f6a12af7)
- PPP\_STARTING : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7ca632204028ea5f855831924eeba5be19b)
- PPP\_STOPPED : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7caca2412bb44a0304e094a75717ae59326)
- PPP\_STOPPING : [ppp.h](group__ppp.md#gga6d4283a0ae63a227933d12d42318cf7cadad45283af72e570ed0acae6d35d3a9b)
- PPP\_TERMINATE : [ppp.h](group__ppp.md#gga284e237a6323f2daffc444a73a4b8b6bac1f10a2aa5edcb826621304de596a5b7)
- PPP\_TERMINATE\_ACK : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa2e434ed0e64c4620aa4d8e41de31a0f6)
- PPP\_TERMINATE\_REQ : [ppp.h](group__ppp.md#gga305eaed8ab120c7821de1618e10728cfa0c0cc9b36c5b5b3902bddbd29fad8a9c)
- PROTOCOL\_ERROR : [usbc.h](group____usbc__device__api.md#gga66f934a5c5cd88b574c71d1f18fbda23a8cb937247ec21f791706f4f426496a8c)
- PT\_IRQ\_TYPE\_ISA : [domctl.h](public_2domctl_8h.md#aa0ba08b170800d6d7723b694525ade07a46633da322cceb9716d497db0a6c7684)
- PT\_IRQ\_TYPE\_MSI : [domctl.h](public_2domctl_8h.md#aa0ba08b170800d6d7723b694525ade07a378f677ce6b550e1f2dd1ce7e4a1cefb)
- PT\_IRQ\_TYPE\_MSI\_TRANSLATE : [domctl.h](public_2domctl_8h.md#aa0ba08b170800d6d7723b694525ade07ad8c9df22103d8549d00e3da9c0e3a607)
- PT\_IRQ\_TYPE\_PCI : [domctl.h](public_2domctl_8h.md#aa0ba08b170800d6d7723b694525ade07a243f287f1e887559dad46c487d30dfb7)
- PT\_IRQ\_TYPE\_SPI : [domctl.h](public_2domctl_8h.md#aa0ba08b170800d6d7723b694525ade07a55314f6bde5f058264c442506b23a818)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
